
noinst_LIBRARIES = libvmaps.a

libvmaps_a_CPPFLAGS = -I$(top_srcdir)/dep/include

libvmaps_a_SOURCES = \
	AABSPTree.h \
	BaseModel.cpp \
	BaseModel.h \
	CoordModelMapping.cpp \
	CoordModelMapping.h \
	IVMapManager.h \
	ManagedModelContainer.cpp \
	ManagedModelContainer.h \
	ModelContainer.cpp \
	ModelContainer.h \
	NodeValueAccess.h \
	ShortBox.h \
	ShortVector.h \
	SubModel.cpp \
	SubModel.h \
	TileAssembler.cpp \
	TileAssembler.h \
	TreeNode.cpp \
	TreeNode.h \
	VMapDefinitions.h \
	VMapFactory.cpp \
	VMapFactory.h \
	VMapManager.cpp \
	VMapManager.h \
	VMapTools.h
