

noinst_LIBRARIES = libG3D.a

libG3D_a_CPPFLAGS = -I$(top_srcdir)/dep/include

if DEBUG
libG3D_a_CPPFLAGS += -DDEBUG -D_DEBUG -DG3D_DEBUG -DG3D_DEBUGRELEASE
endif

libG3D_a_SOURCES= \
AABox.cpp \
AnyVal.cpp \
BinaryFormat.cpp \
BinaryInput.cpp \
BinaryOutput.cpp \
Box.cpp \
Capsule.cpp \
CollisionDetection.cpp \
Color1.cpp \
Color1uint8.cpp \
Color3.cpp \
Color3uint8.cpp \
Color4.cpp \
Color4uint8.cpp \
Cone.cpp \
ConvexPolyhedron.cpp \
CoordinateFrame.cpp \
Crypto.cpp \
Crypto_md5.cpp \
Cylinder.cpp \
debugAssert.cpp \
Discovery.cpp \
fileutils.cpp \
filter.cpp \
format.cpp \
g3dmath.cpp \
GCamera.cpp \
GImage.cpp \
GImage_bayer.cpp \
GImage_bmp.cpp \
GImage_jpeg.cpp \
GImage_png.cpp \
GImage_ppm.cpp \
GImage_tga.cpp \
GLight.cpp \
GThread.cpp \
GUniqueID.cpp \
Image1.cpp \
Image1uint8.cpp \
Image3.cpp \
Image3uint8.cpp \
Image4.cpp \
Image4uint8.cpp \
license.cpp \
Line.cpp \
LineSegment.cpp \
Log.cpp \
Matrix.cpp \
Matrix3.cpp \
Matrix4.cpp \
MeshAlg.cpp \
MeshAlgAdjacency.cpp \
MeshAlgWeld.cpp \
MeshBuilder.cpp \
NetAddress.cpp \
NetworkDevice.cpp \
PhysicsFrame.cpp \
Plane.cpp \
prompt.cpp \
Quat.cpp \
Ray.cpp \
RegistryUtil.cpp \
Sphere.cpp \
Stopwatch.cpp \
stringutils.cpp \
System.cpp \
TextInput.cpp \
TextOutput.cpp \
Triangle.cpp \
UprightFrame.cpp \
Vector2.cpp \
Vector2int16.cpp \
Vector3.cpp \
Vector3int16.cpp \
Vector4.cpp \
Vector4int8.cpp \
WinMain.cpp 










