

noinst_LIBRARIES = libGLG3D.a

libGLG3D_a_CPPFLAGS = -I$(top_srcdir)/dep/include

if DEBUG
libGLG3D_a_CPPFLAGS += -DDEBUG -D_DEBUG -DG3D_DEBUG -DG3D_DEBUGRELEASE
endif

libGLG3D_a_SOURCES= \
ArticulatedModel.cpp \
ArticulatedModel_pose.cpp \
BSPMAP.cpp \
BSPMAPLoad.cpp \
CameraControlWindow.cpp \
CarbonWindow.cpp \
DDSTexture.cpp \
DeveloperWindow.cpp \
directinput8.h \
Draw.cpp \
DXCaps.cpp \
edgeFeatures.cpp \
FirstPersonManipulator.cpp \
Framebuffer.cpp \
G3DGameUnits.cpp \
GApp.cpp \
GaussianBlur.cpp \
GConsole.cpp \
getOpenGLState.cpp \
GEvent.cpp \
GFont.cpp \
GKey.cpp \
glcalls.cpp \
GLCaps.cpp \
glenumtostring.cpp \
GPUProgram.cpp \
GuiButton.cpp \
GuiCaption.cpp \
GuiCheckBox.cpp \
GuiControl.cpp \
GuiDropDownList.cpp \
GuiLabel.cpp \
GuiPane.cpp \
GuiRadioButton.cpp \
GuiSkin.cpp \
GuiSlider.cpp \
GuiTextBox.cpp \
GuiWindow.cpp \
GWindow.cpp \
IFSModel.cpp \
Load3DS.h \
MD2Model.cpp \
MD2Model_load.cpp \
Milestone.cpp \
NSAutoreleasePoolWrapper.mm \
PixelProgram.cpp \
PosedModel.cpp \
Renderbuffer.cpp \
RenderDevice.cpp \
SDLWindow.cpp \
Shader.cpp \
ShadowMap.cpp \
shadowVolume.cpp \
Shape.cpp \
Sky.cpp \
SkyParameters.cpp \
SuperShader.cpp \
tesselate.cpp \
Texture.cpp \
TextureFormat.cpp \
ThirdPersonManipulator.cpp \
ToneMap.cpp \
UprightSplineManipulator.cpp \
UserInput.cpp \
VAR.cpp \
VARArea.cpp \
VertexProgram.cpp \
Widget.cpp \
Win32Window.cpp










